--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "next": "12.0.7",
+    "pexels": "^1.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-spring": "^9.3.3",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "eslint": "8.5.0",
